<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mascware.app.myappcontact.ActivityConfirm">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textconfirmDatos"
        android:id="@+id/titleConfirm"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginTop="20dp"
         android:layout_below="@id/titleConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textConfNombre"
        android:id="@+id/infoNombre"
        android:textSize="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textConfDate"
        android:layout_below="@id/infoNombre"
        android:id="@+id/infoFecha"
        android:layout_marginTop="10dp"
        android:textSize="14dp" />

    <TextView
        android:layout_below="@id/infoFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textConfTel"
        android:id="@+id/infotel"
        android:layout_marginTop="10dp"
        android:textSize="14dp" />

    <TextView
        android:layout_below="@id/infotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textConfMail"
        android:id="@+id/infoMail"
        android:layout_marginTop="10dp"
        android:textSize="14dp" />

    <TextView
        android:layout_below="@id/infoMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textConfDesc"
        android:id="@+id/infoDesc"
        android:layout_marginTop="10dp"
        android:textSize="14dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textButtonEdit"
        android:id="@+id/buttonEdit"
        android:theme="@style/MyRaisedButton"
        android:layout_below="@+id/infoDesc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
</RelativeLayout>
