<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mascware.app.myappcontact.MainActivity"
    style="@style/AppTheme"
   >


    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputLayout
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewlayoutTextNom">
        <EditText
            android:id="@+id/textNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_nombre"/>
    </android.support.design.widget.TextInputLayout>
    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:layout_below="@+id/viewlayoutTextNom"

       />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewlayoutTextTel"
        android:layout_below="@+id/datePicker">
        <EditText
            android:id="@+id/textTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_tel"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewlayoutTextMail"
        android:layout_below="@+id/viewlayoutTextTel">
        <EditText
            android:id="@+id/textMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_mail"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewlayoutTextDesc"
        android:layout_below="@+id/viewlayoutTextMail">
        <EditText
            android:id="@+id/textDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_desc"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonSgte"
        android:id="@+id/buttongte"
        android:layout_below="@id/viewlayoutTextDesc"
        android:theme="@style/MyRaisedButton"
        />
    </RelativeLayout>
</ScrollView>

</RelativeLayout>